force-app/main/default/objects/API_Token__c/API_Token__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>used to host user oauth tokens for api integrations</description>
    <label>apitoken</label>
</CustomObject>