force-app/main/default/objects/API_Token__c/fields/client_id__c.field-meta.xml
<CustomField>
    <fullName>client_id__c</fullName>
    <label>client_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>