force-app/main/default/objects/API_Token__c/fields/Connected_Date__c.field-meta.xml
<CustomField>
    <fullName>Connected_Date__c</fullName>
    <label>Connected Date</label>
    <type>DateTime</type>
</CustomField>