force-app/main/default/objects/API_Token__c/fields/created_date__c.field-meta.xml
<CustomField>
    <fullName>created_date__c</fullName>
    <label>Created Date</label>
    <type>DateTime</type>
</CustomField>