force-app/main/default/objects/API_Token__c/fields/Disconnected_Date__c.field-meta.xml
<CustomField>
    <fullName>Disconnected_Date__c</fullName>
    <label>Disconnected Date</label>
    <type>DateTime</type>
</CustomField>