force-app/main/default/objects/API_Token__c/fields/expires_at__c.field-meta.xml
<CustomField>
    <fullName>expires_at__c</fullName>
    <label>Expires At</label>
    <type>DateTime</type>
</CustomField>