force-app/main/default/objects/API_Token__c/fields/refresh_token__c.field-meta.xml
<CustomField>
    <fullName>refresh_token__c</fullName>
    <label>Refresh Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>