force-app/main/default/objects/API_Token__c/fields/Sfdc_User_Id__c.field-meta.xml
<CustomField>
    <fullName>Sfdc_User_Id__c</fullName>
    <label>Salesforce User Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>