force-app/main/default/objects/API_Token__c/fields/token_type__c.field-meta.xml
<CustomField>
    <fullName>token_type__c</fullName>
    <label>Token Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>