force-app/main/default/objects/API_Token__c/fields/user_id__c.field-meta.xml
<CustomField>
    <fullName>user_id__c</fullName>
    <label>user_id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>